gcc/testsuite/rust/rustc/ui/error-codes/E0429.rs
use std::fmt::self; // { dg-error ".E0429." "" { target *-*-* } }

fn main () {
}

